# urich

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  logo.psd  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: IDEAS.md  architecture.md  cli.md  community.md  design-multi-language.md  getting-started.md  index.md  roadmap.md
docs/examples/: ecommerce.md
docs/guide/: application.md  di-services-strategies.md  domain-building-blocks.md  domain-independence.md  domain-module.md  domain-without-framework.md  multi-aggregate.md  openapi.md  other-modules.md  stateless-context.md  why-urich.md
docs/reference/: overview.md
examples/ecommerce/: README.md  adapters.py  config.py  main.py  run_minimal.py  stateless_module.py
examples/ecommerce/orders/: application.py  domain.py  infrastructure.py  module.py
examples/ecommerce/pricing/: application.py  domain.py  infrastructure.py  module.py
src/urich/: __init__.py
src/urich/cli/: __init__.py  main.py  templates.py
src/urich/core/: __init__.py  app.py  config.py  container.py  openapi.py  request.py  responses.py  routing.py
src/urich/ddd/: commands.py  domain_module.py
src/urich/discovery/: __init__.py  discovery_module.py
src/urich/domain/: __init__.py  entity.py  events.py  value_object.py
src/urich/events/: outbox.py
src/urich/rpc/: __init__.py  protocol.py  rpc_module.py
urich-core/: Cargo.toml
urich-core/src/: application.rs  asgi.rs  container.rs  http.rs  into_core_error.rs  lib.rs  module.rs  outbox.rs  router.rs  routing.rs  schema.rs  service_discovery.rs
urich-core/tests/: handle_request.rs
urich-python/: Cargo.toml  README.md  pyproject.toml
urich-python/python/urich/core/: app.py  config.py  module.py  openapi.py  request.py
urich-python/python/urich/ddd/: __init__.py  domain_module.py
urich-python/python/urich/discovery/: protocol.py
urich-python/python/urich/domain/: __init__.py  aggregate.py  repository.py
urich-python/python/urich/events/: __init__.py  event_bus_module.py  protocol.py
urich-python/python/urich/rpc/: __init__.py
urich-python/src/: lib.rs
urich-rs/: Cargo.toml  README.md
urich-rs/examples/: orders.rs  orders_with_middleware.rs
urich-rs/macros/: Cargo.toml
urich-rs/macros/src/: lib.rs
urich-rs/src/: lib.rs
urich-rs/src/core/: app.rs  container.rs  into_core_error.rs  mod.rs  module.rs  outbox.rs  routing.rs  service_discovery.rs
urich-rs/src/ddd/: command_handler.rs  commands.rs  domain_module.rs  mod.rs
urich-rs/src/discovery/: mod.rs  protocol.rs
urich-rs/src/domain/: aggregate.rs  entity.rs  events.rs  mod.rs  repository.rs
urich-rs/src/events/: mod.rs  outbox.rs  protocol.rs
urich-rs/src/rpc/: mod.rs  protocol.rs
