[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urich"
version = "0.1.0"
description = "Async DDD framework for microservices on Starlette"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.41.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "uvicorn"]
cli = ["typer>=0.9.0"]

[project.scripts]
urich = "urich.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
