[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "urich"
version = "0.1.4"
description = "Async DDD framework for Python microservices (urich-core backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]
keywords = ["ddd", "microservices", "cqrs", "http"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "uvicorn"]
cli = ["typer>=0.9.0"]
docs = ["mkdocs>=1.5,<2", "mkdocs-material>=9.0", "pymdown-extensions"]

[project.urls]
Homepage = "https://kashn9sh.github.io/urich"
Documentation = "https://kashn9sh.github.io/urich"
Repository = "https://github.com/KashN9sh/urich"

[project.scripts]
urich = "urich.cli.main:main"

[tool.maturin]
manifest-path = "urich-python/Cargo.toml"
python-source = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
