[package]
name = "urich-core"
version = "0.1.0"
edition = "2021"
description = "Urich core: HTTP, routing, validation, host callback (async)"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "sync", "io-util"] }
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
