[package]
name = "urich-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Urich core (PyO3)"

[lib]
name = "urich_core_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
urich-core = { path = "../urich-core" }
serde_json = "1.0"
