[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin.build"

[project]
name = "urich-core-native"
version = "0.1.0"
description = "Native (Rust) core for Urich - Python bindings"
requires-python = ">=3.12"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "urich_core_native"
