[package]
name = "urich-rs"
version = "0.1.0"
edition = "2021"
description = "Urich for Rust: DDD/CQRS framework on urich-core"

[dependencies]
urich-core = { path = "../urich-core" }
urich-rs-macros = { path = "macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"

[[bin]]
name = "urich"
path = "src/bin/urich.rs"
